RESOLVED FIXED 119858
AX: Crash: com.apple.WebKit.WebContent at com.apple.WebKit2: WebKit::WebPage::accessibilityObjectForMainFramePlugin + 8
https://bugs.webkit.org/show_bug.cgi?id=119858
Summary AX: Crash: com.apple.WebKit.WebContent at com.apple.WebKit2: WebKit::WebPage:...
chris fleizach
Reported 2013-08-15 13:02:31 PDT
Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000070 Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit2 0x00007fff91606092 WebKit::WebPage::accessibilityObjectForMainFramePlugin() + 8 1 com.apple.WebKit2 0x00007fff9164fda8 -[WKAccessibilityWebPageObject accessibilityRootObjectWrapper] + 44 2 com.apple.WebKit2 0x00007fff916503b9 -[WKAccessibilityWebPageObject accessibilityHitTest:] + 351
Attachments
patch (1.18 KB, patch)
2013-08-15 13:56 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2013-08-15 13:02:50 PDT
Lucas Forschler
Comment 2 2013-08-15 13:08:13 PDT
please use the full rdar path for bugs, otherwise the radar webkit bug importer complains
Lucas Forschler
Comment 3 2013-08-15 13:08:32 PDT
chris fleizach
Comment 4 2013-08-15 13:56:36 PDT
WebKit Commit Bot
Comment 5 2013-08-15 16:39:01 PDT
Comment on attachment 208850 [details] patch Clearing flags on attachment: 208850 Committed r154151: <http://trac.webkit.org/changeset/154151>
WebKit Commit Bot
Comment 6 2013-08-15 16:39:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.