<https://webkit.org/b/119858> AX: Crash: com.apple.WebKit.WebContent at com.apple.WebKit2: WebKit::WebPage::accessibilityObjectForMainFramePlugin + 8

Reviewed by Tim Horton.

Ensure that the page is available before accessing it.

* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::accessibilityObjectForMainFramePlugin):


Canonical link: https://commits.webkit.org/137830@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154151 268f45cc-cd09-0410-ab3c-d52691b4dbfc